scripts/nullness/original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8.txt
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:17: error: [initialization.fields.uninitialized] the constructor does not initialize fields: numLeft
	public CombinationGenerator(int n, int r) {
	       ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:27: error: [method.invocation] call to getFactorial(int) not allowed on the given receiver.
		BigInteger nFact = getFactorial(n);
		                               ^
  found   : @UnderInitialization @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:28: error: [method.invocation] call to getFactorial(int) not allowed on the given receiver.
		BigInteger rFact = getFactorial(r);
		                               ^
  found   : @UnderInitialization @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:29: error: [method.invocation] call to getFactorial(int) not allowed on the given receiver.
		BigInteger nminusrFact = getFactorial(n - r);
		                                     ^
  found   : @UnderInitialization @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/com/merriampark/Gilleland/CombinationGenerator.java:31: error: [method.invocation] call to reset() not allowed on the given receiver.
		reset();
		     ^
  found   : @UnderInitialization @NonNull CombinationGenerator
  required: @Initialized @NonNull CombinationGenerator
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:53: error: [initialization.fields.uninitialized] the constructor does not initialize fields: formula, formula2, sigma
	public WFF(String formula) {
	       ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:234: error: [dereference.of.nullable] dereference of possibly-null reference o
			symbols.add(o.toString());
			            ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/WFF.java:502: error: [dereference.of.nullable] dereference of possibly-null reference o
				symbols.add(o.toString());
				            ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/defaultLogic/WorldSet.java:17: error: [method.invocation] call to addFormula(java.lang.String) not allowed on the given receiver.
		addFormula(a.e.EMPTY_FORMULA); // We assume that empty is true (this is
		          ^
  found   : @UnderInitialization(be.fnord.util.logic.defaultLogic.WorldSet.class) @NonNull WorldSet
  required: @Initialized @NonNull WorldSet
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/AbductionReasoner.java:31: error: [method.invocation] call to _AbductionReasoner(java.lang.String,java.util.LinkedList<java.lang.String>,java.lang.String) not allowed on the given receiver.
		_AbductionReasoner(_kb, _facts, _observations);
		                  ^
  found   : @UnderInitialization(be.fnord.util.logic.AbductionReasoner.class) @NonNull AbductionReasoner
  required: @Initialized @NonNull AbductionReasoner
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/AbductionReasoner.java:36: error: [method.invocation] call to _AbductionReasoner(java.lang.String,java.util.LinkedList<java.lang.String>,java.lang.String) not allowed on the given receiver.
		_AbductionReasoner(_kb, _facts, _observations);
		                  ^
  found   : @UnderInitialization(be.fnord.util.logic.AbductionReasoner.class) @NonNull AbductionReasoner
  required: @Initialized @NonNull AbductionReasoner
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:55: error: [initialization.fields.uninitialized] the constructor does not initialize fields: rules, world
	public DefaultReasoner() {
	       ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:86: error: [method.invocation] call to _DefaultReasoner(be.fnord.util.logic.defaultLogic.WorldSet,be.fnord.util.logic.defaultLogic.RuleSet) not allowed on the given receiver.
		_DefaultReasoner(myWorld, myRules);
		                ^
  found   : @UnderInitialization @NonNull DefaultReasoner
  required: @Initialized @NonNull DefaultReasoner
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:89: error: [initialization.fields.uninitialized] the constructor does not initialize fields: rules, world
	public DefaultReasoner(WorldSet myWorld, RuleSet myRules) {
	       ^
../original/url7895f5cfa7_edm92_defaultlogic_tgz-pJ8-be_fnord_DefaultLogic_AppJ8/src/be/fnord/util/logic/DefaultReasoner.java:90: error: [method.invocation] call to _DefaultReasoner(be.fnord.util.logic.defaultLogic.WorldSet,be.fnord.util.logic.defaultLogic.RuleSet) not allowed on the given receiver.
		_DefaultReasoner(myWorld, myRules);
		                ^
  found   : @UnderInitialization @NonNull DefaultReasoner
  required: @Initialized @NonNull DefaultReasoner
15 errors
